# NRAP-Open-IAM-Dev

./: .gitignore  .gitlab-ci.yml  Changelog.md  LICENSE  Run_OpenIAM_GUI_Linux.sh  Run_OpenIAM_GUI_Windows.bat  pyproject.toml  readme.md  setup.cfg
documentation/bibliography/: project.bib
documentation/common/: replace_math.rst
documentation/developer/: Makefile
documentation/website/: Makefile
examples/Control_Files/: ControlFile_ex10.yaml  ControlFile_ex11.yaml  ControlFile_ex12.yaml  ControlFile_ex13.yaml  ControlFile_ex14.yaml  ControlFile_ex15.yaml  ControlFile_ex16.yaml  ControlFile_ex17.yaml  ControlFile_ex18.yaml  ControlFile_ex19.yaml  ControlFile_ex1a.yaml  ControlFile_ex1b.yaml  ControlFile_ex2.yaml  ControlFile_ex20.yaml  ControlFile_ex21.yaml  ControlFile_ex22.yaml  ControlFile_ex23.yaml  ControlFile_ex24.yaml  ControlFile_ex25.yaml  ControlFile_ex26.yaml  ControlFile_ex27.yaml  ControlFile_ex28.yaml  ControlFile_ex29.yaml  ControlFile_ex3.yaml  ControlFile_ex30.yaml  ControlFile_ex31a.yaml  ControlFile_ex31b.yaml  ControlFile_ex31c.yaml  ControlFile_ex31d.yaml  ControlFile_ex31e.yaml  ControlFile_ex31f.yaml  ControlFile_ex31g.yaml  ControlFile_ex32a.yaml  ControlFile_ex32b.yaml  ControlFile_ex32c.yaml  ControlFile_ex33.yaml  ControlFile_ex33a.yaml  ControlFile_ex33b.yaml  ControlFile_ex34.yaml  ControlFile_ex35.yaml  (+81 more)
examples/GUI_Files/: 07_LHS_LUT_MSW_FG2AZ.OpenIAM  08_PARSTUDY_PSA.OpenIAM  09_Forward_LUT_SH.OpenIAM  14_Forward_HCL.OpenIAM
examples/Jupyter_notebooks/: 01_iam_sys_reservoir_mswell.ipynb  02_iam_sys_reservoir.ipynb  03_iam_sys_reservoir_mswell_mcmc.ipynb  04_iam_conformance.ipynb  06a_iam_cfi_aor_workflow_ar.ipynb  (+11 more)
setup/: openiam_setup_tests.py
test/: iam_test.py  test_control_file.yaml
(+439 files in other folders)
