[metadata]
name = openiam
version = file: src/openiam/VERSION
description = Integrated Assessment Model for Quantitative Geological Carbon Storage Risk Assessment
author = NRAP-Open-IAM development team
author_email = veronika.vasylkivska@netl.doe.gov, nathaniel.mitchell@netl.doe.gov
license = MIT


[options]
zip_safe = false
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    numpy
    scipy
    matplotlib>=3.6.0
    h5py
    scikit-learn>=0.24
    tensorflow
    pandas
	pyyaml
	Pmw
python_requires = >=3.9

[options.packages.find]
where=src

[options.package_data]
* = *.png
openiam = VERSION

